RESOLVED FIXED279813
AVIF not shown in MacCatalyst WKWebView
https://bugs.webkit.org/show_bug.cgi?id=279813
Summary AVIF not shown in MacCatalyst WKWebView
Per Arne Vollan
Reported 2024-09-17 02:46:29 PDT
AVIF not shown in MacCatalyst WKWebView.
Attachments
Per Arne Vollan
Comment 1 2024-09-17 02:46:32 PDT
Per Arne Vollan
Comment 2 2024-09-17 02:49:27 PDT
EWS
Comment 3 2024-09-17 13:42:03 PDT
Committed 283795@main (f67104ca0804): <https://commits.webkit.org/283795@main> Reviewed commits have been landed. Closing PR #33759 and removing active labels.
EWS
Comment 4 2024-09-18 18:05:26 PDT
Committed 283286.85@safari-7620-branch (4c27adbc0540): <https://commits.webkit.org/283286.85@safari-7620-branch> Reviewed commits have been landed. Closing PR #1836 and removing active labels.
EWS
Comment 5 2024-09-18 20:14:38 PDT
Committed 280938.358@safari-7619-branch (d98dfa9f17b5): <https://commits.webkit.org/280938.358@safari-7619-branch> Reviewed commits have been landed. Closing PR #1841 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.