AVIF not shown in MacCatalyst WKWebView https://bugs.webkit.org/show_bug.cgi?id=279813 rdar://133272264

Reviewed by Brent Fulgham, Said Abou-Hallawa, and Chris Dumez.

On macOS, we create a Mach sandbox extension to trustd, if TRUSTD_BLOCKING_IN_WEBCONTENT is not enabled.
We should do the same on MacCatalyst, which will grant temporary access to trustd and enable rendering
of AVIF images.

* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::platformInitializeWebProcess):
* Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::platformInitializeWebProcess):

Canonical link: https://commits.webkit.org/283795@main